# cryptograms

./: .gitignore  README.md  WORD_LIBRARIES.md  demo_wordbank.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
cryptograms/: __init__.py  api.py  service.py
cryptograms/cli/: main.py
cryptograms/core/: __init__.py  __main__.py  candidates.py  constraints.py  exceptions.py  guess.py  models.py  patterns.py  scoring.py  solver.py  words.py
static/: index.html
tests/: __init__.py  test_candidates.py  test_constraints.py  test_e2e.py  test_guesser.py  test_scoring.py  test_solver.py  test_wordbank.py
