[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptograms"
version = "0.1.0"
requires-python = ">=3.12"
description = "Substitution cipher solver using pattern matching and constraint propagation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "not-em", email = "not-em@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "nltk>=3.8",
    "wordfreq>=3.0",
]

[project.urls]
Homepage = "https://github.com/not-em/cryptograms"
Repository = "https://github.com/not-em/cryptograms"
"Bug Tracker" = "https://github.com/not-em/cryptograms/issues"

[project.scripts]
cryptograms = "cryptograms.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]


[tool.black]
line-length = 88
target-version = ['py314']
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py314"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

lint.ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["cryptograms"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
